# GraphicsV1

./: .gitignore  CGame.cpp  CMakeLists.txt  GameState.cpp  GameState.h  Transform.h  UserInput.cpp  UserInput.h  main.cpp
GraphicsV1/Assets/: scene.unity
GraphicsV1/Assets/Materials/: Grass.mat  Landscape.mat  Mud.mat
GraphicsV1/Assets/Models/busket/Materials/: _2___Default.mat  _2___Defaultaa.mat  wire_000000255.mat
GraphicsV1/Assets/Models/stone1/Materials/: stone.mat
GraphicsV1/Assets/Models/stone2/: stone2.mtl
GraphicsV1/Assets/Prefabs/: Fruit1.prefab  HitPoint.prefab
GraphicsV1/Assets/Scripts/: Busket.cs  FruitsDestructor.cs  FruitsSpawner.cs  HitPointsController.cs  MainController.cs
GraphicsV1/ProjectSettings/: ProjectSettings.asset
Renders/: ImageRender.cpp  MainRender.h
VS2017/: VS2017.sln
VS2017/GraphicsV1/: GraphicsV1.vcxproj  GraphicsV1.vcxproj.filters
src/: CGame.cpp  CGame.h  FruitsBuilder.cpp  FruitsBuilder.h  FruitsController.cpp  FruitsController.h  GameObject.h  GameState.h  HitpointsController.cpp  HitpointsController.h  Player.cpp  Player.h  Transform.cpp  Transform.h  eggsFall.frag  eggsFall.vert  main.cpp
src/Colliders/: BoxCollider.cpp  BoxCollider.h  CollisionHandler.cpp  CollisionHandler.h
src/Renders/: Camera.cpp  Camera.h  IRender.h  ImageDiRender.cpp  ImageDiRender.h  ImagePixelsRender.cpp  ImagePixelsRender.h  ImageRender.cpp  ImageRender.h  MainRender.cpp  MainRender.h  ObjRender.cpp  ObjRender.h  UIDiTextRender.cpp  UIDiTextRender.h  UIPixelsTextRender.cpp  UIPixelsTextRender.h  UITextRender.cpp  UITextRender.h
(+3 files in other folders)
